# community-storage

./: .cursorrules  .gitignore  deweb_cli_config.buildnet.json  plan.md
.github/workflows/: ci-server.yml  ci-tests.yml  deploy-deweb-buildnet.yml
front/: .env.example  .env.sandbox  SANDBOX.md  index.html  package-lock.json  package.json  tailwind.config.js
front/src/: App.jsx  index.css  main.jsx
front/src/components/: ErrorBoundary.jsx  FloatingFileIcons.jsx  Layout.jsx  SandboxBanner.jsx  SandboxOnly.jsx  SnakeTrail.jsx  SonarDots.jsx  StatCard.jsx
front/src/context/: ThemeContext.jsx  WalletContext.jsx
front/src/contract/: mockData.js  storageRegistry.js  storageRegistryApi.js
front/src/lib/: blocklistStorage.js  downloadFromProvider.js  myFilesStorage.js  providerHealth.js  uploadToProvider.js
front/src/pages/: Admin.jsx  Dashboard.jsx  Deposit.jsx  Landing.jsx  MyDashboard.jsx  MyFiles.jsx  ProvideStorage.jsx  Sandbox.jsx  Settings.jsx  StoreFiles.jsx
server/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
server/scripts/: setup.sh  status.sh  teardown.sh
server/src/: api.rs  args.rs  auth.rs  config.rs  contract.rs  main.rs  massa_grpc.rs  p2p.rs  sc_client.rs  storage.rs
smartContract/: .env.example  package-lock.json  package.json
smartContract/assembly/__tests__/: storage-registry.spec.ts
smartContract/assembly/contracts/: storage-registry.ts
smartContract/assembly/structs/: Challenge.ts  PeriodStats.ts  StorageConfig.ts  StorageNode.ts  index.ts
smartContract/src/: deploy.ts  full-setup.ts  fund-rewards.ts  infos.ts  list-providers.ts  register-provider.ts  register-uploader.ts  update-p2p-addrs.ts  upload-file.ts
