[package]
name = "massa-storage-server"
version = "0.1.0"
edition = "2021"
description = "Simple storage server for Massa distributed storage (upload + read API, data indexing)"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
openssl = { version = "0.10", features = ["vendored"] }
blake3 = "1.5"
ed25519-dalek = "2.1"
bs58 = "0.5"
libp2p = { version = "0.56.0", features = ["tcp", "quic", "noise", "ping", "tokio", "yamux", "identify", "macros"] }
futures = "0.3"
dotenvy = "0.15"
anyhow = "1.0"

# HTTP client for Massa JSON-RPC
reqwest = { version = "0.12", features = ["json"] }
